force-app/main/default/objects/Trip_Option__c/fields/Alternative_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Start_Date__c</fullName>
    <label>Alternative Start Date</label>
    <type>Date</type>
</CustomField>