force-app/main/default/objects/Trip_Option__c/fields/GST_On_Price__c.field-meta.xml
<CustomField>
    <fullName>GST_On_Price__c</fullName>
    <formula>Price__c-Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST On Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>