force-app/main/default/objects/Trip_Option__c/fields/Number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days__c</fullName>
    <label>Number of days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>