force-app/main/default/objects/Trip_Option__c/fields/Single_Occupancy_Charge__c.field-meta.xml
<CustomField>
    <fullName>Single_Occupancy_Charge__c</fullName>
    <label>Single Occupancy Charge</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>