force-app/main/default/objects/Trip_Option__c/fields/Total_Walk_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Walk_Distance__c</fullName>
    <label>Total Walk/Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>