force-app/main/default/objects/Trip_Option__c/fields/Trip_Option_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Trip_Option_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Trip Option External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>