force-app/main/default/objects/Trip_Option__c/fields/Trip_Option_Overview__c.field-meta.xml
<CustomField>
    <fullName>Trip_Option_Overview__c</fullName>
    <label>Trip Option Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>