force-app/main/default/objects/Trip_Option__c/fields/Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Trip_Type__c</fullName>
    <label>Trip Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Guided</fullName>
            </value>
            <value>
                <fullName>Group Guided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>