force-app/main/default/objects/Trip_Option__c/fields/Walk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Walk_Grade__c</fullName>
    <label>Walk Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy to Moderate</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Moderate to Challenging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>