force-app/main/default/objects/Trip_Option__c/recordTypes/Group_Guided.recordType-meta.xml
<RecordType>
    <fullName>Group_Guided</fullName>
    <active>true</active>
    <label>Group Guided</label>
</RecordType>