force-app/main/default/objects/Trip_Option__c/recordTypes/Self_Guided.recordType-meta.xml
<RecordType>
    <fullName>Self_Guided</fullName>
    <active>true</active>
    <label>Self Guided</label>
</RecordType>